@@ -697,7 +697,9 @@ static const Ecore_Evas_Engine_Func _ecore_ews_engine_func =
 
      _ecore_evas_ews_render,
      _ecore_evas_ews_screen_geometry_get,
-     NULL  // screen_dpi_get
+     NULL,  // screen_dpi_get
+     NULL,
+     NULL   // msg_send
 };
 
 void
