@@ -559,7 +559,9 @@ static Ecore_Evas_Engine_Func _ecore_fb_engine_func =
 
      NULL, // render
      NULL, // screen_geometry_get
-     NULL  // screen_dpi_get
+     NULL, // screen_dpi_get
+     NULL,
+     NULL   // msg_send
  };
 
 EAPI Ecore_Evas *
