@@ -404,7 +404,9 @@ static Ecore_Evas_Engine_Func _ecore_psl1ght_engine_func =
 
    NULL, // render
    _ecore_evas_screen_geometry_get, // screen_geometry_get
-   NULL  // screen_dpi_get
+   NULL, // screen_dpi_get
+   NULL,
+   NULL  //msg_send
 };
 
 EAPI Ecore_Evas *
