@@ -445,7 +445,9 @@ static Ecore_Evas_Engine_Func _ecore_sdl_engine_func =
 
    NULL, // render
    NULL, // screen_geometry_get
-   NULL  // screen_dpi_get
+   NULL, // screen_dpi_get
+   NULL,
+   NULL   // msg_send
 };
 
 static Ecore_Evas*
