@@ -74,7 +74,9 @@ static Ecore_Evas_Engine_Func _ecore_wl_engine_func =
    NULL, // focus skip set
    _ecore_evas_wl_common_render,
    _ecore_evas_wl_common_screen_geometry_get,
-   _ecore_evas_wl_common_screen_dpi_get
+   _ecore_evas_wl_common_screen_dpi_get,
+   NULL,
+   NULL   // msg_send
 };
 
 /* external variables */
