@@ -1152,7 +1152,9 @@ static Ecore_Evas_Engine_Func _ecore_win32_engine_func =
 
      NULL, // render
      NULL, // screen_geometry_get
-     _ecore_evas_win32_screen_dpi_get
+     _ecore_evas_win32_screen_dpi_get,
+     NULL,
+     NULL   // msg_send
 };
 
 #endif /* BUILD_ECORE_EVAS_WIN32 */
