@@ -63,6 +63,7 @@ Additions:
     * added eet_data_descriptor_name_get()
     * Add eio_eet_sync symbols.
     * Add infrastructure to handle buggy touchscreen in Ecore_Input_Evas.
+    * Add infrastructure to handle message between ecore and parent ecore in Ecore_Evas.
 
 Deprecations:
     * ecore_x:
